fix minor layout issues , margins etc

--- a/assets/style.css
+++ b/assets/style.css
@@ -124,6 +124,7 @@ body {
     font-weight: 700;
     letter-spacing: 1px;
     padding-bottom: 10px;
+    margin: 0;
     
 }
 
@@ -203,6 +204,7 @@ font-family: "Montserrat", sans-serif;
     width: 30%;
     margin-right: 50px;
     margin-top: -35px;
+   
     
 
 }
@@ -222,6 +224,11 @@ font-family: "Montserrat", sans-serif;
     text-align: center;
 }
 
+.left-content p {
+    align-items: center;
+    margin: 0;
+}
+
 .right-content h1 {
     margin-top: 100px;
     text-transform: uppercase;
@@ -229,6 +236,11 @@ font-family: "Montserrat", sans-serif;
     font-size: 20px;
     padding-bottom: 10px;
     text-align: center;
+}
+
+.right-content p {
+    align-items: center;
+    margin: 0;
 }
 
 #price {
@@ -279,7 +291,7 @@ hr {
 
 #meetup-map {
     width: 700px;
-    height: 420px;
+    height: 440px;
 } 
 
 .rightmap {
@@ -294,6 +306,8 @@ hr {
     
 }
 
+
+
 .textmap h1 {
     font-size: 35px;
     margin-bottom: 20px;
@@ -302,6 +316,7 @@ hr {
 
 .textmap p {
     font-size: 15px;
+    margin: 10px 0 10px 0;
     
 
 }
@@ -348,7 +363,7 @@ hr {
     color: #fafafa;
     width: 100%;
     height: 25px;
-    margin: 5px 0 10px 0;
+    margin: 5px 0 0px 0;
     border: 1px solid #fafafa;
     border-radius: 5px;
 }
